--- a/sass/modules/_navigation.scss
+++ b/sass/modules/_navigation.scss
@@ -52,6 +52,7 @@ a {
 	// Current items
 	.current_page_item a,
 	.current-menu-item a {
+		background-color: $color-transparent-home;
 	}
 		// Menu area
 		ul {
@@ -71,8 +72,9 @@ a {
 			height: 4em;
 			padding-top: .1em;
 		}
+
 		&:hover > a {
-			background-color: $color-transparent-home;
+			background-color: $color-background-home;
 		}
 	}
 }
@@ -90,7 +92,7 @@ a {
 			&:hover {
 				background: url("images/logo-dk-blue.svg") no-repeat center center;
 				background-size: auto 3em; 
-				background-color: $color-transparent-home;
+				background-color: $color-background-home;
 			}
 		}
 	}
