--- a/sass/modules/_navigation.scss
+++ b/sass/modules/_navigation.scss
@@ -17,31 +17,31 @@ a {
 	}
 }
 
-// Main navigation (after creating a menu in the dashboard)
-.nav-wrapper {
-}
+// Primary Menu
+
+$nav-height: 4em;
 .main-navigation {
-	$nav-height: 4em;
 	@include size(100% auto);
-	clear: both;
-	display: block;
-	float: left;
 
 	// Menu hyperlinks
 	a {
-		display: inline-block;
+		display: block;
 		text-decoration: none;
 		text-transform: uppercase;
 		letter-spacing: 0.2em;
 		color: $color-link-header;
-		width: $nav-height*2;
+		width: 100%;
+		line-height: $nav-height;
+		height: 4em;
 		@include header-font;
-		&.menu-toggle {
-			display: none;
+		@include wider-than(tablet-portrait) {
+			display: inline-block;
+			width: $nav-height*2;
+			&.menu-toggle {
+				display: none;
+			}
 		}
-	}
-	@media screen and (max-width: 900px) {
-		a {
+		@include wider-than(tablet-landscape) {
 			width: $nav-height*3;
 		}
 	}
@@ -54,13 +54,18 @@ a {
 	.current-menu-item a {
 		background-color: $color-transparent-home;
 	}
-		// Menu area
-		ul {
-			list-style: none;
-			margin: 0;
-			padding-left: 0;
-			text-align: center;
+
+	// Menu area
+	ul {
+		list-style: none;
+		margin: 0;
+		padding-left: 0;
+		text-align: center;
+		display: none;
+		@include wider-than(tablet-portrait) {
+			display: block;
 		}
+	}
 
 	// Menu items
 	li {
@@ -68,16 +73,18 @@ a {
 		text-align: center;
 		width: 100%;
 		a {
-			line-height: $nav-height;
-			height: 4em;
 			padding-top: .1em;
 		}
 
 		&:hover > a {
 			background-color: $color-background-home;
 		}
+		.menu-item-home a {
+			display: none;
+		}
 	}
 }
+
 // Sticky nav
 .anchor {
 	&.anchor-moved {
@@ -86,7 +93,6 @@ a {
 		.menu-item-home a {
 			background: url("images/logo-lt-blue.svg") no-repeat center center;
 			background-size: auto 3em; 
-			display: inline-block;
 			color: transparent;
 			text-indent: -9999px;
 			&:hover {
@@ -94,33 +100,27 @@ a {
 				background-size: auto 3em; 
 				background-color: $color-background-home;
 			}
+			@include wider-than(tablet-portrait) {
+				display: inline-block;
+			}
+		}
+		a.menu-toggle {
+			background: url("images/logo-lt-blue.svg") no-repeat left .5em center;
+			background-size: auto 2em;
 		}
 	}
 }
-// Small menu
 
-@media screen and (max-width: 600px) {
-	.nav-wrapper a {
-		width: 100%;
-	}
-	.menu-toggle {
-		text-align:right;
-		padding: .5em;
-	}
-	.anchor-moved a.menu-toggle {
-		background: url("images/logo-lt-blue.svg") no-repeat left .5em center;
-		background-size: auto 2em;
-	}
-	.nav-wrapper a.menu-toggle,
-	.main-navigation.toggled .nav-menu {
-		display: block;
-	}
-	.main-navigation ul,
-	.main-navigation li.menu-item-home {
-		display: none;
-	}
+.menu-toggle {
+	text-align:right;
+	padding: .5em;
 }
 
+.main-navigation.toggled .nav-menu {
+	display: block;
+}
+
+// Internal Nav
 .comment-navigation,
 .posts-navigation,
 .post-navigation {
