--- a/style.css
+++ b/style.css
@@ -1166,28 +1166,21 @@ a:active {
 .main-navigation {
 	height: auto;
 	width: 100%;
-	clear: both;
-	display: block;
-	float: left;
 }
 
-/* line 31, sass/modules/_navigation.scss */
+/* line 27, sass/modules/_navigation.scss */
 
 .main-navigation a {
-	display: inline-block;
+	display: block;
 	text-decoration: none;
 	text-transform: uppercase;
 	letter-spacing: 0.2em;
 	color: #FFFBEB;
-	width: 8em;
+	width: 100%;
+	line-height: 4em;
+	height: 4em;
 	font-family: "League Spartan";
 	font-weight: normal;
-}
-
-/* line 39, sass/modules/_navigation.scss */
-
-.main-navigation a.menu-toggle {
-	display: none;
 }
 
 /* line 49, sass/modules/_navigation.scss */
@@ -1203,16 +1196,17 @@ a:active {
 	background-color: rgba(66, 131, 155, 0.5);
 }
 
-/* line 58, sass/modules/_navigation.scss */
+/* line 59, sass/modules/_navigation.scss */
 
 .main-navigation ul {
 	list-style: none;
 	margin: 0;
 	padding-left: 0;
 	text-align: center;
+	display: none;
 }
 
-/* line 66, sass/modules/_navigation.scss */
+/* line 71, sass/modules/_navigation.scss */
 
 .main-navigation li {
 	display: inline;
@@ -1220,43 +1214,66 @@ a:active {
 	width: 100%;
 }
 
-/* line 70, sass/modules/_navigation.scss */
+/* line 75, sass/modules/_navigation.scss */
 
 .main-navigation li a {
-	line-height: 4em;
-	height: 4em;
 	padding-top: .1em;
 }
 
-/* line 76, sass/modules/_navigation.scss */
+/* line 79, sass/modules/_navigation.scss */
 
 .main-navigation li:hover > a {
 	background-color: #42839B;
 }
 
-/* line 83, sass/modules/_navigation.scss */
+/* line 82, sass/modules/_navigation.scss */
+
+.main-navigation li .menu-item-home a {
+	display: none;
+}
+
+/* line 90, sass/modules/_navigation.scss */
 
 .anchor.anchor-moved {
 	position: fixed;
 	top: 0;
 }
 
-/* line 86, sass/modules/_navigation.scss */
+/* line 93, sass/modules/_navigation.scss */
 
 .anchor.anchor-moved .menu-item-home a {
 	background: url("images/logo-lt-blue.svg") no-repeat center center;
 	background-size: auto 3em;
-	display: inline-block;
 	color: transparent;
 	text-indent: -9999px;
 }
 
-/* line 92, sass/modules/_navigation.scss */
+/* line 98, sass/modules/_navigation.scss */
 
 .anchor.anchor-moved .menu-item-home a:hover {
 	background: url("images/logo-dk-blue.svg") no-repeat center center;
 	background-size: auto 3em;
 	background-color: #42839B;
+}
+
+/* line 107, sass/modules/_navigation.scss */
+
+.anchor.anchor-moved a.menu-toggle {
+	background: url("images/logo-lt-blue.svg") no-repeat left 0.5em center;
+	background-size: auto 2em;
+}
+
+/* line 114, sass/modules/_navigation.scss */
+
+.menu-toggle {
+	text-align: right;
+	padding: .5em;
+}
+
+/* line 119, sass/modules/_navigation.scss */
+
+.main-navigation.toggled .nav-menu {
+	display: block;
 }
 
 /* line 128, sass/modules/_navigation.scss */
@@ -1767,6 +1784,45 @@ Infinite scroll
 	display: none;
 }
 
+@media (min-width: 48em) {
+
+/* line 27, sass/modules/_navigation.scss */
+
+.main-navigation a {
+	display: inline-block;
+	width: 8em;
+}
+
+/* line 40, sass/modules/_navigation.scss */
+
+.main-navigation a.menu-toggle {
+	display: none;
+}
+
+/* line 59, sass/modules/_navigation.scss */
+
+.main-navigation ul {
+	display: block;
+}
+
+/* line 93, sass/modules/_navigation.scss */
+
+.anchor.anchor-moved .menu-item-home a {
+	display: inline-block;
+}
+
+}
+
+@media (min-width: 64em) {
+
+/* line 27, sass/modules/_navigation.scss */
+
+.main-navigation a {
+	width: 12em;
+}
+
+}
+
 @media (min-width: 85.375em) {
 
 /* line 6, sass/structure/_layout.scss */
@@ -1819,51 +1875,7 @@ Infinite scroll
 
 }
 
-@media screen and (max-width: 900px) {
-
-/* line 44, sass/modules/_navigation.scss */
-
-.main-navigation a {
-	width: 12em;
-}
-
-}
-
 @media screen and (max-width: 600px) {
-
-/* line 103, sass/modules/_navigation.scss */
-
-.nav-wrapper a {
-	width: 100%;
-}
-
-/* line 106, sass/modules/_navigation.scss */
-
-.menu-toggle {
-	text-align: right;
-	padding: .5em;
-}
-
-/* line 110, sass/modules/_navigation.scss */
-
-.anchor-moved a.menu-toggle {
-	background: url("images/logo-lt-blue.svg") no-repeat left 0.5em center;
-	background-size: auto 2em;
-}
-
-/* line 114, sass/modules/_navigation.scss */
-
-.nav-wrapper a.menu-toggle,
-.main-navigation.toggled .nav-menu {
-	display: block;
-}
-
-/* line 118, sass/modules/_navigation.scss */
-
-.main-navigation ul,
-.main-navigation li.menu-item-home {
-	display: none;
-}
 
 /* line 19, sass/modules/_content.scss */
 
